--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://AbdallahNaser.github.io/my-portfolio",
+  "homepage": "https://abdallahnaser.github.io/my-portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -36,9 +36,6 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
-    "vite": "npm:rolldown-vite@7.1.14"
-  },
-  "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
   }
 }
