--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "name": "my-portfolio",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
   "homepage": "https://abdallahnaser.github.io/my-portfolio",
   "scripts": {
@@ -9,7 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.16",
