--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-portfolio",
+  "name": "profile",
   "type": "module",
   "homepage": "https://abdallahnaser.github.io/profile",
   "scripts": {
